--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "uvicorn[stadard] (>=0.38.0,<0.39.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
     "pydantic (>=2.12.5,<3.0.0)",
-    "pydantic-settings (>=2.12.0,<3.0.0)"
+    "pydantic-settings (>=2.12.0,<3.0.0)",
+    "requests (>=2.32.5,<3.0.0)",
+    "beautifulsoup4 (>=4.14.3,<5.0.0)"
 ]
 
 
