Add celery, redis and tasks for celery

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ DEBUG=True
 
 REDIS_URL=redis://your_ip:your_port/your_db_number
 
+PROJECT_NAME=project_name
+
 # Параметры телеграма из my.telegram.org
 TELEGRAM_API_ID=12345
 TELEGRAM_API_HASH=your_api_hash
