--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
+# Общие настройки
 DEBUG=True
+STRICT_FILTERING=False
 
 REDIS_URL=redis://your_ip:your_port/your_db_number
 
@@ -12,4 +14,5 @@ TELEGRAM_API_HASH=your_api_hash
 TELEGRAM_BOT_TOKEN=bot_token
 TELEGRAM_CHANNEL_ID=channel_id
 
+# Фильтрация новостей
 NEWS_KEYWORDS=python,fastapi,django,ai,aiogram,нейросети
