Add Telegram bot and Docker

--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,18 @@
 DEBUG=True
 STRICT_FILTERING=False
 
-REDIS_URL=redis://your_ip:your_port/your_db_number
+# Redis (docker-compose)
+REDIS_URL=redis://redis:6379/0
 
 PROJECT_NAME=project_name
+
+#Токен телеграма из BotFather
+TELEGRAM_BOT_TOKEN=your_bot_token
+TELEGRAM_CHANNEL_ID=channel_id
 
 # Параметры телеграма из my.telegram.org
 TELEGRAM_API_ID=12345
 TELEGRAM_API_HASH=your_api_hash
-TELEGRAM_CHANNEL_ID=channel_id
 
 # Фильтрация новостей
 NEWS_KEYWORDS=python,fastapi,django,ai,aiogram,нейросети
